src/test/ui/parser/lifetime-in-pattern.rs
// compile-flags: -Z parse-only

fn test(&'a str) {
    //~^ ERROR unexpected lifetime `'a` in pattern
}

fn main() {
}
